turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: type mismatch;
 found   : java.awt.Color
 required: Int
	var (a,b,c) = rule(state)(x)
                                  ^Turmite:16: error: type mismatch;
 found   : Any
 required: Int
		case 0 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse();avance(); state = c
                                                  ^Turmite:16: error: type mismatch;
 found   : Any
 required: Int
		case 0 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse();avance(); state = c
                                                                                                     ^Turmite:17: error: type mismatch;
 found   : Any
 required: Int
		case 2 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); gauche(); avance(); stace = c
                                                  ^Turmite:17: error: not found: value stace
		case 2 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); gauche(); avance(); stace = c
                                                                                                        ^Turmite:18: error: type mismatch;
 found   : Any
 required: Int
		case 4 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); droite(); droite(); avance(); state = c
                                                  ^Turmite:18: error: type mismatch;
 found   : Any
 required: Int
		case 4 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); droite(); droite(); avance(); state = c
                                                                                                                          ^Turmite:19: error: type mismatch;
 found   : Any
 required: Int
		case 8 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); droite();avance(); state = c
                                                  ^Turmite:19: error: type mismatch;
 found   : Any
 required: Int
		case 8 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); droite();avance(); state = c
                                                                                                               ^